--- a/stores.html
+++ b/stores.html
@@ -45,7 +45,7 @@
 
         <!-- Sales Carousel -->
         <section id="sales-carousel">
-            <div id="myCarousel" class="carousel slide parallax" data-ride="carousel">
+            <div id="myCarousel" class="carousel slide parallax-1" data-ride="carousel">
                 <!-- Carousel indicators -->
                 <ol class="carousel-indicators">
                     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="container margin:auto padding:auto h-100  d-none d-md-block">
-                            <div class="row align-items-center h-100">
+                            <div id="ad2" class="row align-items-center h-100">
                                 <img src="images/second.jpg" alt="First Slide">
                             </div>
                         </div>
@@ -167,7 +167,7 @@
                 <div class="card">
                     <img class="card-img-top" src="images/item-7.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h4 class="card-title">Donuts</h4>
+                        <h4 class="card-title">Glazed Donuts</h4>
                          <a id="item-5" href="#" onclick="itemModal(this.id);event.preventDefault();">Learn More</a>
                         <br>
                         <h1 class="price">Rs. 200</h1>
@@ -218,7 +218,7 @@
                 <div class="card">
                     <img class="card-img-top" src="images/item-9.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h4 class="card-title">Caramel Fudge</h4>
+                        <h4 class="card-title">Fudge Brownie</h4>
                          <a id="item-8" href="#" onclick="itemModal(this.id);event.preventDefault();">Learn More</a>
                         <br>
                         <h1 class="price">Rs. 150</h1>
